force-app/main/default/objects/Case/fields/Aftermarket_Parts_History__c.field-meta.xml
<CustomField>
    <fullName>Aftermarket_Parts_History__c</fullName>
    <label>Aftermarket Parts History</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>