force-app/main/default/objects/Case/fields/Age_Days__c.field-meta.xml
<CustomField>
    <fullName>Age_Days__c</fullName>
    <formula>if( not(IsClosed ),today()- datevalue(CreatedDate) ,datevalue(ClosedDate) -datevalue( CreatedDate ))</formula>
    <label>Age (Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>