force-app/main/default/objects/Case/fields/Batch_Update__c.field-meta.xml
<CustomField>
    <fullName>Batch_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Batch Update</label>
    <type>Checkbox</type>
</CustomField>