force-app/main/default/objects/Case/fields/Bus_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Bus_Mileage__c</fullName>
    <label>Bus Mileage</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>