force-app/main/default/objects/Case/fields/Bus_Number__c.field-meta.xml
<CustomField>
    <fullName>Bus_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bus Number</label>
    <referenceTo>Bus__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>