force-app/main/default/objects/Case/fields/Campaign_Number1__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Number1__c</fullName>
    <description>/The Campaign Number is based on the Campaign Type selected. Hidden as of 6/17/22.</description>
    <formula>IF(ISPICKVAL(Campaign_Type__c, &quot;Field Service Campaign&quot;), &quot;FSC&quot; +&quot; &quot;+ RIGHT(TEXT(YEAR(DATEVALUE(CreatedDate))),2) +&quot;-&quot; + RIGHT(TEXT (VALUE( CaseNumber )),4) ,

(IF(ISPICKVAL(Campaign_Type__c, &quot;Safety Recall Campaign&quot;), &quot;SRC&quot; +&quot; &quot;+ RIGHT(TEXT(YEAR(DATEVALUE(CreatedDate))),2) +&quot;-&quot; + RIGHT(TEXT (VALUE( CaseNumber )),4),


IF(ISPICKVAL(Campaign_Type__c, &quot;CSC&quot;), &quot;Customer Service Campaign&quot; +&quot; &quot;+ RIGHT(TEXT( YEAR(DATEVALUE(CreatedDate))),2) +&quot;-&quot; + RIGHT(TEXT (VALUE( CaseNumber )),4), &quot; &quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Number 1</label>
    <type>Text</type>
</CustomField>