force-app/main/default/objects/Case/fields/Campaign_Number__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Number__c</fullName>
    <label>Campaign Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>