force-app/main/default/objects/Case/fields/Campaign_Type__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Type__c</fullName>
    <description>The 3 different kinds of Campaign Case
SRC -Manufacturer or NHTSA determines that a vehicle creates an unreasonable safety risk or fails to meet minimum safety standards
FSC-Product improvement update impacting multiple customers
CSC -Product improvement update impacting single customer</description>
    <label>Campaign Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Safety Recall Campaign</fullName>
            </value>
            <value>
                <fullName>Field Service Campaign</fullName>
            </value>
            <value>
                <fullName>Customer Service Campaign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>