force-app/main/default/objects/Case/fields/Committee_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Committee_Review_Date__c</fullName>
    <description>The review completed date by the committee</description>
    <label>Committee Review Date</label>
    <type>Date</type>
</CustomField>