force-app/main/default/objects/Case/fields/Complaint__c.field-meta.xml
<CustomField>
    <fullName>Complaint__c</fullName>
    <label>Complaint</label>
    <type>TextArea</type>
</CustomField>