force-app/main/default/objects/Case/fields/Containment__c.field-meta.xml
<CustomField>
    <fullName>Containment__c</fullName>
    <label>Containment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>