force-app/main/default/objects/Case/fields/Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Content_Type__c</fullName>
    <label>Content Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GILLIG Driver’s Handbook</fullName>
            </value>
            <value>
                <fullName>GILLIG Parts Manual</fullName>
            </value>
            <value>
                <fullName>GILLIG Schematics Manual</fullName>
            </value>
            <value>
                <fullName>GILLIG Service Manual</fullName>
            </value>
            <value>
                <fullName>OEM Service Manuals</fullName>
            </value>
            <value>
                <fullName>GILLIG All Manuals</fullName>
            </value>
            <value>
                <fullName>Training Videos</fullName>
            </value>
            <value>
                <fullName>Emergency Rescue Sheet</fullName>
            </value>
            <value>
                <fullName>Emergency Responders Guide</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>