force-app/main/default/objects/Case/fields/Correction__c.field-meta.xml
<CustomField>
    <fullName>Correction__c</fullName>
    <label>Correction</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>