force-app/main/default/objects/Case/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <label>Cost%</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>