force-app/main/default/objects/Case/fields/Cost_Impact__c.field-meta.xml
<CustomField>
    <fullName>Cost_Impact__c</fullName>
    <label>Cost Impact</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>