force-app/main/default/objects/Case/fields/Customer_Bus_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Bus_Number__c</fullName>
    <formula>Bus_Number__r.Customer_Bus_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Bus Number</label>
    <type>Text</type>
</CustomField>