force-app/main/default/objects/Case/fields/Customer_Care_Campaign_Upload__c.field-meta.xml
<CustomField>
    <fullName>Customer_Care_Campaign_Upload__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Care Campaign Upload</label>
    <type>Checkbox</type>
</CustomField>