force-app/main/default/objects/Case/fields/Customer_Notification__c.field-meta.xml
<CustomField>
    <fullName>Customer_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Notification</label>
    <type>Checkbox</type>
</CustomField>