force-app/main/default/objects/Case/fields/Customer_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Status__c</fullName>
    <label>Customer Status</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>