force-app/main/default/objects/Case/fields/Emissions_Related__c.field-meta.xml
<CustomField>
    <fullName>Emissions_Related__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emissions Related</label>
    <type>Checkbox</type>
</CustomField>