force-app/main/default/objects/Case/fields/Failure_Date__c.field-meta.xml
<CustomField>
    <fullName>Failure_Date__c</fullName>
    <label>Failure Date</label>
    <type>Date</type>
</CustomField>