force-app/main/default/objects/Case/fields/Failure_Rate__c.field-meta.xml
<CustomField>
    <fullName>Failure_Rate__c</fullName>
    <label>Failure Rate</label>
    <type>TextArea</type>
</CustomField>