force-app/main/default/objects/Case/fields/Failure_Theory_and_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Failure_Theory_and_Analysis__c</fullName>
    <label>Failure Theory and Analysis</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>