force-app/main/default/objects/Case/fields/Field_Service_Rep__c.field-meta.xml
<CustomField>
    <fullName>Field_Service_Rep__c</fullName>
    <description>The Field Service Rep related to this Account</description>
    <formula>Account.Field_Service_Rep__r.FirstName  &amp; &quot; &quot;  &amp;  Account.Field_Service_Rep__r.LastName</formula>
    <label>Field Service Rep</label>
    <type>Text</type>
</CustomField>