force-app/main/default/objects/Case/fields/Field_Service_Report_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Field_Service_Report_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Shows if a Field Service File was uploaded to this Case File</description>
    <inlineHelpText>Check if a Field Service File was uploaded with this Case File</inlineHelpText>
    <label>Field Service Report Uploaded</label>
    <type>Checkbox</type>
</CustomField>