force-app/main/default/objects/Case/fields/FSI_Tracker__c.field-meta.xml
<CustomField>
    <fullName>FSI_Tracker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FSI Tracker</label>
    <type>Checkbox</type>
</CustomField>