force-app/main/default/objects/Case/fields/GILLIG_Requester__c.field-meta.xml
<CustomField>
    <fullName>GILLIG_Requester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Enter only if Requester is different than Case Creator.</inlineHelpText>
    <label>GILLIG Requester</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>