force-app/main/default/objects/Case/fields/Include_on_Issues_Log__c.field-meta.xml
<CustomField>
    <fullName>Include_on_Issues_Log__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include on Issues Log</label>
    <type>Checkbox</type>
</CustomField>