force-app/main/default/objects/Case/fields/Internal_Name__c.field-meta.xml
<CustomField>
    <fullName>Internal_Name__c</fullName>
    <formula>if(not(isblank( AccountId )),Account.Internal_Name__c,

if(not(isblank( Bus_Number__c )), Bus_Number__r.Sales_Order__r.Internal_Name__c ,



if(not(isblank( Sales_Order__c )), Sales_Order__r.Account__r.Internal_Name__c ,&quot;&quot;)))</formula>
    <label>Internal Name</label>
    <type>Text</type>
</CustomField>