force-app/main/default/objects/Case/fields/Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Item_Number__c</fullName>
    <label>Item Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>