force-app/main/default/objects/Case/fields/Labor_Cost__c.field-meta.xml
<CustomField>
    <fullName>Labor_Cost__c</fullName>
    <description>The Cost of Labor for each</description>
    <label>Labor Cost</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>