force-app/main/default/objects/Case/fields/Labor_Count__c.field-meta.xml
<CustomField>
    <fullName>Labor_Count__c</fullName>
    <label>Labor Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>