force-app/main/default/objects/Case/fields/Labor_Qty__c.field-meta.xml
<CustomField>
    <fullName>Labor_Qty__c</fullName>
    <description>The amount of units or quantity</description>
    <label>Labor Unit  Qty</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>