force-app/main/default/objects/Case/fields/Labor_Total__c.field-meta.xml
<CustomField>
    <fullName>Labor_Total__c</fullName>
    <description>The Total Cost for Labor</description>
    <formula>(Labor_Count__c  *  Labor_Cost__c ) *  Labor_Qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Total Cost for Labor</inlineHelpText>
    <label>Labor Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>