force-app/main/default/objects/Case/fields/Manual_Creator__c.field-meta.xml
<CustomField>
    <fullName>Manual_Creator__c</fullName>
    <description>The person who created the original manual PDF.</description>
    <label>Manual Creator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Publications_Order_Processors</valueSetName>
    </valueSet>
</CustomField>