force-app/main/default/objects/Case/fields/Manual_Year__c.field-meta.xml
<CustomField>
    <fullName>Manual_Year__c</fullName>
    <label>Manual Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>