force-app/main/default/objects/Case/fields/Misc_Expense__c.field-meta.xml
<CustomField>
    <fullName>Misc_Expense__c</fullName>
    <label>Misc Expense</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>