force-app/main/default/objects/Case/fields/Misc_Expense_Total__c.field-meta.xml
<CustomField>
    <fullName>Misc_Expense_Total__c</fullName>
    <description>The Misc Expense Total</description>
    <formula>(Labor_Total__c  +  Parts_Total__c ) *  Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Misc Expense Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>