force-app/main/default/objects/Case/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <formula>Bus_Number__r.Mode__c</formula>
    <label>Mode</label>
    <type>Text</type>
</CustomField>