force-app/main/default/objects/Case/fields/New_Manual_Revision__c.field-meta.xml
<CustomField>
    <fullName>New_Manual_Revision__c</fullName>
    <inlineHelpText>Indicate revision letter.</inlineHelpText>
    <label>New Manual Revision</label>
    <length>2</length>
    <type>Text</type>
</CustomField>