force-app/main/default/objects/Case/fields/Notify_Finance__c.field-meta.xml
<CustomField>
    <fullName>Notify_Finance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify Finance</label>
    <type>Checkbox</type>
</CustomField>