force-app/main/default/objects/Case/fields/Notify_Warranty_Team__c.field-meta.xml
<CustomField>
    <fullName>Notify_Warranty_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify Warranty Team</label>
    <type>Checkbox</type>
</CustomField>