force-app/main/default/objects/Case/fields/Other_Population__c.field-meta.xml
<CustomField>
    <fullName>Other_Population__c</fullName>
    <label>Other Population</label>
    <type>TextArea</type>
</CustomField>