force-app/main/default/objects/Case/fields/Package_Labeling_Problems__c.field-meta.xml
<CustomField>
    <fullName>Package_Labeling_Problems__c</fullName>
    <label>Package Labeling Problems</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Barcodes are missing or do not scan</fullName>
            </value>
            <value>
                <fullName>Gillig part number is missing or incorrect</fullName>
            </value>
            <value>
                <fullName>Gillig PO line/release number is missing or incorrect</fullName>
            </value>
            <value>
                <fullName>Gillig PO number is missing or incorrect</fullName>
            </value>
            <value>
                <fullName>Quantity is missing or incorrect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>