force-app/main/default/objects/Case/fields/Packing_Slip_Problems__c.field-meta.xml
<CustomField>
    <fullName>Packing_Slip_Problems__c</fullName>
    <label>Packing Slip Problems</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gillig part number on packing slip is missing or incorrect</fullName>
            </value>
            <value>
                <fullName>PO on packing slip is missing or incorrect</fullName>
            </value>
            <value>
                <fullName>Quantity on packing slip is missing or incorrect</fullName>
            </value>
            <value>
                <fullName>Shipment did not have a packing slip</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>