force-app/main/default/objects/Case/fields/Page_Creator__c.field-meta.xml
<CustomField>
    <fullName>Page_Creator__c</fullName>
    <description>The person who created the original page.</description>
    <label>Page Creator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Publications_Order_Processors</valueSetName>
    </valueSet>
</CustomField>