force-app/main/default/objects/Case/fields/Page_Number__c.field-meta.xml
<CustomField>
    <fullName>Page_Number__c</fullName>
    <label>Page Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>