force-app/main/default/objects/Case/fields/Page_Title_or_Topic__c.field-meta.xml
<CustomField>
    <fullName>Page_Title_or_Topic__c</fullName>
    <label>Page Title or Topic</label>
    <length>100</length>
    <type>Text</type>
</CustomField>