force-app/main/default/objects/Case/fields/Page_Year__c.field-meta.xml
<CustomField>
    <fullName>Page_Year__c</fullName>
    <label>Page Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>