force-app/main/default/objects/Case/fields/Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Part_Number__c</fullName>
    <label>Part Number</label>
    <type>TextArea</type>
</CustomField>