force-app/main/default/objects/Case/fields/Partner_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Partner_Notifications__c</fullName>
    <label>Partner Notifications</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Partner_Notifications</valueSetName>
    </valueSet>
</CustomField>