force-app/main/default/objects/Case/fields/Parts__c.field-meta.xml
<CustomField>
    <fullName>Parts__c</fullName>
    <label>Parts Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>