force-app/main/default/objects/Case/fields/Parts_Cost__c.field-meta.xml
<CustomField>
    <fullName>Parts_Cost__c</fullName>
    <label>Parts Cost</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>