force-app/main/default/objects/Case/fields/Parts_Details__c.field-meta.xml
<CustomField>
    <fullName>Parts_Details__c</fullName>
    <description>Description to the parts</description>
    <label>Parts Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>