force-app/main/default/objects/Case/fields/Parts_Qty__c.field-meta.xml
<CustomField>
    <fullName>Parts_Qty__c</fullName>
    <label>Parts Unit Qty</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>