force-app/main/default/objects/Case/fields/Parts_Return_Auth_num__c.field-meta.xml
<CustomField>
    <fullName>Parts_Return_Auth_num__c</fullName>
    <label>Parts Return Auth #</label>
    <length>15</length>
    <type>Text</type>
</CustomField>