force-app/main/default/objects/Case/fields/Parts_Total__c.field-meta.xml
<CustomField>
    <fullName>Parts_Total__c</fullName>
    <description>The Total amount of Parts</description>
    <formula>(Parts__c  *  Parts_Cost__c ) *  Parts_Qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Total amount of Parts</inlineHelpText>
    <label>Parts Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>