force-app/main/default/objects/Case/fields/Problem_Code__c.field-meta.xml
<CustomField>
    <fullName>Problem_Code__c</fullName>
    <label>Problem Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Problem_Code</valueSetName>
    </valueSet>
</CustomField>