force-app/main/default/objects/Case/fields/Problem_Sub_Code__c.field-meta.xml
<CustomField>
    <fullName>Problem_Sub_Code__c</fullName>
    <label>Problem Sub Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Problem_Code__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Problem_Sub_Code</valueSetName>
    </valueSet>
</CustomField>