force-app/main/default/objects/Case/fields/Production_Containment_information__c.field-meta.xml
<CustomField>
    <fullName>Production_Containment_information__c</fullName>
    <description>The number or date relating to the production</description>
    <label>Production Containment information</label>
    <length>100</length>
    <type>Text</type>
</CustomField>