force-app/main/default/objects/Case/fields/Project_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Sales_Manager__c</fullName>
    <formula>Account.Project_Sales_Manager__r.FirstName &amp;&quot; &quot;&amp; Account.Project_Sales_Manager__r.LastName</formula>
    <label>Project Sales Manager</label>
    <type>Text</type>
</CustomField>