force-app/main/default/objects/Case/fields/Purchase_Order_Problems__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Problems__c</fullName>
    <label>Purchase Order Problems</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PO is already received, complete or closed in Symix</fullName>
            </value>
            <value>
                <fullName>PO is still planned</fullName>
            </value>
            <value>
                <fullName>PO will be over received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>