force-app/main/default/objects/Case/fields/Regional_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Regional_Sales_Manager__c</fullName>
    <formula>Account.Owner.FirstName &amp;&quot; &quot;&amp; Account.Owner.LastName</formula>
    <label>Regional Sales Manager</label>
    <type>Text</type>
</CustomField>