force-app/main/default/objects/Case/fields/REI_Number__c.field-meta.xml
<CustomField>
    <fullName>REI_Number__c</fullName>
    <label>REI Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>