force-app/main/default/objects/Case/fields/Repair_Plan__c.field-meta.xml
<CustomField>
    <fullName>Repair_Plan__c</fullName>
    <description>Link to knowledge article.</description>
    <label>Knowledge Article Link</label>
    <type>Url</type>
</CustomField>