force-app/main/default/objects/Case/fields/Reported_By_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Reported_By_Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reported By (Supervisor)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>