force-app/main/default/objects/Case/fields/Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause__c</fullName>
    <label>Root Cause</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assembly error - Not built to print</fullName>
            </value>
            <value>
                <fullName>Assembly error - Wrong part</fullName>
            </value>
            <value>
                <fullName>Bill - Bill is missing/Engineering error</fullName>
            </value>
            <value>
                <fullName>Bill - Missing install/ Engineering error</fullName>
            </value>
            <value>
                <fullName>Bill - Missing part/Engineering error</fullName>
            </value>
            <value>
                <fullName>Bill - Missing schematic/Engineering error</fullName>
            </value>
            <value>
                <fullName>Bill - Wrong bill/ Engieering error</fullName>
            </value>
            <value>
                <fullName>Bill - Wrong install/ Engineering error</fullName>
            </value>
            <value>
                <fullName>Bill - Wrong part/ Engineering error</fullName>
            </value>
            <value>
                <fullName>Bill - Wrong schematic/ Engineering error</fullName>
            </value>
            <value>
                <fullName>Design error - Part made to print does not work</fullName>
            </value>
            <value>
                <fullName>I/O - Bad IOC Module</fullName>
            </value>
            <value>
                <fullName>I/O - Gillig Incorrect Harness Design</fullName>
            </value>
            <value>
                <fullName>I/O - Harness Vendor Wiring Issue</fullName>
            </value>
            <value>
                <fullName>I/O - Improper Parts Installation</fullName>
            </value>
            <value>
                <fullName>I/O - IOC Software Bug Issue</fullName>
            </value>
            <value>
                <fullName>I/O - Missed I/O Requirement</fullName>
            </value>
            <value>
                <fullName>I/O - PCO - Controls Group Not Informed</fullName>
            </value>
            <value>
                <fullName>I/O - Poor Testing Practices (Functioning Correctly)</fullName>
            </value>
            <value>
                <fullName>I/O - Vendor System Design Issue</fullName>
            </value>
            <value>
                <fullName>Part - Bad - Supplier</fullName>
            </value>
            <value>
                <fullName>Part - Bad - Wrong supplier information</fullName>
            </value>
            <value>
                <fullName>Part - Damaged/ Production</fullName>
            </value>
            <value>
                <fullName>Part - Damaged/ Supplier</fullName>
            </value>
            <value>
                <fullName>Part - Loose fit/Supplier</fullName>
            </value>
            <value>
                <fullName>Part - Marking/Supplier</fullName>
            </value>
            <value>
                <fullName>Part - Not programmed/Engineering</fullName>
            </value>
            <value>
                <fullName>Part - Not programmed/Supplier</fullName>
            </value>
            <value>
                <fullName>Part - Out of specification limits</fullName>
            </value>
            <value>
                <fullName>Schematic Wrong/incomplete/Engineering error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>