force-app/main/default/objects/Case/fields/Safety_Related__c.field-meta.xml
<CustomField>
    <fullName>Safety_Related__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Safety Related</label>
    <type>Checkbox</type>
</CustomField>