force-app/main/default/objects/Case/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If multiple Sales Orders are affected, please enter the primary Sales Order here and add the additional Sales Orders once the case is created (scroll to bottom of page to find this section).</inlineHelpText>
    <label>Sales Order</label>
    <referenceTo>Sales_Order__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>