force-app/main/default/objects/Case/fields/Shipment_Problems__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Problems__c</fullName>
    <label>Shipment Problems</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Material received is not what was ordered</fullName>
            </value>
            <value>
                <fullName>Pallets are incorrect size or grade</fullName>
            </value>
            <value>
                <fullName>Shipment delivered with incorrect address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>