force-app/main/default/objects/Case/fields/Stocking_Level__c.field-meta.xml
<CustomField>
    <fullName>Stocking_Level__c</fullName>
    <label>Stocking Level</label>
    <type>TextArea</type>
</CustomField>